2003-09-02	blytkerchan
	* design.html: fix layout
	* empty.html: ditto
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* intended_audience.html: ditto
	* progress.html: ditto
	* table.html: ditto
	* tech_arch.html: ditto

2003-09-02	blytkerchan
	* empty.html: set width and height of the iframe properly
	* table.html: target _top for all links
	* design.html: use iframe for the table
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* intended_audience.html: ditto
	* progress.html: ditto
	* tech_arch.html: ditto

2003-09-02	blytkerchan
	* empty.html: use IFRAME element in stead of OBJECT
	undo previous change (SF.NET server is down)

2003-09-02	blytkerchan
	* empty.html: attempt to fix link to SF logo

2003-09-02	blytkerchan
	* table.html: new file
	* empty.html: use OBJECT element to include table.html

2003-09-02	blytkerchan
	* tech_arch.html: update references to dereference new files

2003-08-25	blytkerchan
	* goals.html: new file
	* how_you_can_help.html: ditto
	* intended_audience.html: ditto
	* design.html: update references to dereference new files
	* empty.html: ditto
	* progress.html: ditto
	* index.html: ditto
	move contents to proper (new) files
 
2003-08-19	blytkerchan
	* progress.html: new file
	* grammar.msg: ditto
	* index.html: add reference to progress.html
	* empty.html: ditto
	* tech_arch.html: ditto
	* design.html: ditto
	remove empty line from left-hand link table
	* ChangeLog: new file
	* AUTHORS: ditto
