@@ -26,13 +26,25 @@ width="210" height="62" border="0" align="right" alt=
 <div align="justify">
 <h1>Progress...</h1>
 <p>
-Some progress has been made inthe design of the language, but feed-back is 
+Some progress has been made in the design of the language, but feed-back is 
 still painfully lacking. Hence, you will find some important messages, as 
 sent to the jail-ust-lang discussion group below.
 </p>
 <hr>
+<h2>Hard types, weak types, soft types, no types...</h2>
+<p>
+An interesting discussion on the object oriented design behind the Jail 
+language and typing in general starts here: 
+<a href="http://sourceforge.net/mailarchive/message.php?msg_id=5859982">
+Object-oriented design and the Jail language</a><br>
+As a direct result of this discussion, the language model was revised and some
+new keywords were introduced: 
+<a href="http://sourceforge.net/mailarchive/message.php?msg_id=5958410">
+Soft typing: new keywords, inheritance, etc.</a>
+
+</p>
 <h2>The grammar definition</h2>
 <p>
-The original message can be found <a href="grammar.msg">here</a><br>
+The original message can be found <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2827560&forum_id=34463">here</a><br>
 The grammar being discussed is <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/jail-ust/compiler/parse.y?rev=1.1&content-type=text/vnd.viewcvs-markup">here</a><br>
 </p>
