@@ -1,4 +1,7 @@
 2003-09-02	blytkerchan
+	* progress.html: update
+
+2003-09-02	blytkerchan
 	* design.html: fix layout
 	* empty.html: ditto
 	* goals.html: ditto
